--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "regenerator-runtime": "^0.13.5",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.23.2",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
